# ntmn

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  start
src/ntmn/: api.py  core.py  models.py
tests/: test_core.py
